Finished the style for the form

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,7 +19,7 @@ body {
 
 .navbar {
   min-height: 6vh;
-  background: rgb(52, 166, 219);
+  background: #ace5ee;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,6 +32,73 @@ body {
 
     &:hover {
       color: white;
+    }
+  }
+}
+
+.create-post {
+  min-height: 93vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .upload-post {
+    height: 450px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #ace5ee;
+    padding: 2.5rem;
+    border-radius: 10px;
+    border: none;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+      rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
+    h1 {
+      margin-bottom: 1.5rem;
+    }
+    input {
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 8px 5px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 10px;
+      font-family: "M PLUS Rounded 1c", sans-serif;
+      &:focus {
+        outline: none;
+      }
+    }
+    textarea {
+      width: 100%;
+      margin-bottom: 1rem;
+      height: 70px;
+      border: none;
+      border-radius: 10px;
+      padding: 5px 5px;
+      font-size: 1rem;
+      font-family: "M PLUS Rounded 1c", sans-serif;
+      &:focus {
+        outline: none;
+      }
+    }
+    button {
+      font-family: "M PLUS Rounded 1c", sans-serif;
+      font-size: 1rem;
+      width: 100%;
+      padding: 10px 0;
+      border: none;
+      cursor: pointer;
+      border-radius: 10px;
+      &:focus {
+        outline: none;
+      }
+      &:hover {
+        transform: translateY(-1px);
+      }
     }
   }
 }
