--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -36,6 +36,7 @@ body {
   }
 }
 
+//! FORM
 .create-post {
   min-height: 93vh;
   display: flex;
@@ -93,6 +94,7 @@ body {
       border: none;
       cursor: pointer;
       border-radius: 10px;
+      background: #fff;
       &:focus {
         outline: none;
       }
