--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -104,3 +104,33 @@ body {
     }
   }
 }
+
+.main-page {
+  display: flex;
+  justify-content: center;
+
+  .post {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 250px;
+    background: #ace5ee;
+    margin: 1rem;
+    border-radius: 10px;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+      rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
+    h2 {
+      margin-bottom: 1rem;
+    }
+    p {
+      margin: 0.5rem;
+    }
+    h4 {
+      margin: 0.7rem;
+    }
+  }
+}
