--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,6 +6,18 @@
   box-sizing: border-box;
 }
 
+html {
+  &::-webkit-scrollbar {
+    width: 0.6rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #ace5ee;
+  }
+  &::-webkit-scrollbar-track {
+    background: #fff;
+  }
+}
+
 body {
   font-family: "M PLUS Rounded 1c", sans-serif;
   background: #fafafa;
@@ -114,7 +126,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
+    max-width: 500px;
     height: 250px;
     background: #ace5ee;
     margin: 1rem;
@@ -122,7 +134,14 @@ body {
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
       rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 0.3s ease;
 
+    &:hover {
+      transform: scale(1.05);
+    }
+    padding: 1rem;
     h2 {
       margin-bottom: 1rem;
     }
@@ -132,5 +151,38 @@ body {
     h4 {
       margin: 0.7rem;
     }
+  }
+}
+
+//! SINGLE POST
+.post {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 450px;
+  background: #ace5ee;
+  margin: 1rem;
+  border-radius: 10px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+  padding: 1rem;
+  h2 {
+    margin-bottom: 1rem;
+  }
+  p {
+    margin: 0.5rem;
+  }
+  h4 {
+    margin: 0.7rem;
   }
 }
