--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -161,7 +161,7 @@ body {
   justify-content: center;
   align-items: center;
   max-width: 100%;
-  height: 450px;
+  height: 90vh;
   background: #ace5ee;
   margin: 1rem;
   border-radius: 10px;
@@ -169,12 +169,8 @@ body {
     rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   overflow: hidden;
-  cursor: pointer;
   transition: all 0.3s ease;
 
-  &:hover {
-    transform: scale(1.05);
-  }
   padding: 1rem;
   h2 {
     margin-bottom: 1rem;
